# FreightCheck

./: .gitignore  README.md  render.yaml
backend/: .env.example  pyproject.toml
backend/eval/: __main__.py  datasets.py  extraction.py  graph_runner.py  helpers.py  pricing.py  reporting.py  run.py  scenarios.py  synthetic_generator.py  trajectory_expectations.py
backend/eval/suites/: base.py  confidence_calibration.py  cost.py  extraction_accuracy.py  false_positive.py  grounding.py  injection_defence.py  latency.py  mismatch_detection.py  trajectory_correctness.py
backend/scripts/: generate_issue_pdfs.py  generate_test_pdfs.py
backend/src/freightcheck/: errors.py  logging_config.py  main.py  settings.py
backend/src/freightcheck/agent/: __init__.py  checkpointing.py  dispatcher.py  edges.py  graph.py  prompts.py  state.py  tools.py
backend/src/freightcheck/agent/nodes/: __init__.py  compile_report.py  execute_tool.py  extract_all.py  plan_validations.py  reflect.py
backend/src/freightcheck/api/: audit.py  health.py  sessions.py  upload.py
backend/src/freightcheck/schemas/: agent.py  api.py  audit.py  documents.py  gemini_outputs.py  planner.py
backend/src/freightcheck/services/: gemini.py  pdf_parser.py  session_store.py  upload_cache.py
backend/tests/: conftest.py
backend/tests/eval/: test_helpers.py  test_reporting.py  test_run_registry.py  test_suite_smoke_mocked.py  test_synthetic_generator.py
backend/tests/fixtures/: __init__.py  container_numbers.py  gemini_responses.py
backend/tests/integration/: test_agent_graph.py  test_api_endpoints.py  test_audit_live_m5.py  test_gemini_live.py  test_upload_endpoint.py
backend/tests/support/: __init__.py  env_bootstrap.py  live_integration_env.py
backend/tests/unit/: test_compile_report_baseline.py  test_dispatcher.py  test_env_bootstrap.py  test_field_parity.py  test_gemini.py  test_gemini_wire_schemas.py  test_pdf_parser.py  test_planner_translation.py  test_schemas.py  test_session_store_atomic.py  test_tools.py  test_upload_cache.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
knowledge/: freightcheck_agent_briefing.md  freightcheck_api_contract.md  freightcheck_data_models.md  freightcheck_environment_setup.md  freightcheck_error_handling.md  freightcheck_evaluation_spec.md  freightcheck_frontend_spec.md  freightcheck_implementation_rules.md  freightcheck_langgraph_flow.md  freightcheck_prd.md  freightcheck_system_design.md  (+2 more)
(+58 files in other folders)
