[project]
name = "freightcheck"
version = "0.1.0"
description = "FreightCheck logistics document auditing backend."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pymongo>=4.10",
    "motor>=3.6",
    "pymupdf>=1.24",
    "google-genai>=1.0",
    "langgraph>=0.2",
    "langchain-core>=0.3",
    "structlog>=24.4",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.27",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/freightcheck"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests", "eval"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "PT",
    "SIM",
    "RET",
    "ARG",
    "PL",
    "RUF",
    "T20",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "ARG001", "ARG002"]
# The Data Models spec defines string-valued enums via `class X(str, Enum)`
# rather than `StrEnum`. Keep the spec's pattern verbatim per Implementation
# Rules §10.
"src/freightcheck/schemas/audit.py" = ["UP042"]
# FastAPI dependency markers (`File(...)`, `Depends(...)`) are called in
# argument defaults by design. B008 does not apply to FastAPI routes.
"src/freightcheck/api/*.py" = ["B008"]
# `fake_gemini` mirrors `call_gemini`'s six-parameter API.
"tests/integration/test_agent_graph.py" = ["PLR0913"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/freightcheck"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = "freightcheck.agent.graph"
disallow_untyped_defs = false
disable_error_code = ["arg-type"]

[[tool.mypy.overrides]]
module = "pymupdf"
ignore_missing_imports = true
disallow_untyped_calls = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
markers = [
    "integration: tests that require live external services (Gemini, MongoDB). Excluded from default CI.",
]

[tool.coverage.run]
source = ["src/freightcheck"]
branch = true
